[gd_scene load_steps=2 format=3]
[ext_resource type="Script" path="res://game/scenes/modules/environment/PollutionOverlay.gd" id="1"]

[node name="PollutionOverlay" type="HBoxContainer"]
anchors_preset = 1
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 24.0
offset_top = 24.0
offset_right = 324.0
offset_bottom = 88.0
theme_override_constants/separation = 16
mouse_filter = 2
script = ExtResource("1")

[node name="PollutionColumn" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)

[node name="PollutionLabel" type="Label" parent="PollutionColumn"]
unique_name_in_owner = true
text = "Pollution"

[node name="PollutionBar" type="ProgressBar" parent="PollutionColumn"]
unique_name_in_owner = true
size_flags_horizontal = 3
max_value = 100.0
value = 10.0
show_percentage = false

[node name="StressColumn" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)

[node name="StressLabel" type="Label" parent="StressColumn"]
unique_name_in_owner = true
text = "Stress"

[node name="StressBar" type="ProgressBar" parent="StressColumn"]
unique_name_in_owner = true
size_flags_horizontal = 3
max_value = 100.0
value = 5.0
show_percentage = false

[node name="ReputationColumn" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)

[node name="ReputationLabel" type="Label" parent="ReputationColumn"]
unique_name_in_owner = true
text = "Reputation"

[node name="ReputationBar" type="ProgressBar" parent="ReputationColumn"]
unique_name_in_owner = true
size_flags_horizontal = 3
max_value = 100.0
value = 75.0
show_percentage = false
